[gd_scene load_steps=6 format=3 uid="uid://bh747vcllwbuh"]

[ext_resource type="Texture2D" uid="uid://cc7ka8td6saon" path="res://icon.svg" id="1_68gwn"]
[ext_resource type="Script" path="res://scenes/character.gd" id="1_nn2ef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yncab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c5qp"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhkpp"]
size = Vector2(32, 32)

[node name="character" type="CharacterBody2D" groups=["villager"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_nn2ef")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_68gwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yncab")
debug_color = Color(6.73831e-07, 0.646143, 0.244091, 0.42)

[node name="detection" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("RectangleShape2D_4c5qp")

[node name="retreat" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="retreat"]
shape = SubResource("RectangleShape2D_nhkpp")
debug_color = Color(0.624148, 0.350943, 1, 0.42)

[node name="nav" type="NavigationAgent2D" parent="."]
target_desired_distance = 32.0
debug_enabled = true

[node name="tmrRetreat" type="Timer" parent="."]
one_shot = true

[node name="tmrAttack" type="Timer" parent="."]
one_shot = true

[node name="HP" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 24.0
max_value = 25.0
show_percentage = false

[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="area_entered" from="retreat" to="." method="_on_retreat_area_entered"]
[connection signal="area_exited" from="retreat" to="." method="_on_retreat_area_exited"]
[connection signal="timeout" from="tmrRetreat" to="." method="_on_tmr_retreat_timeout"]
[connection signal="timeout" from="tmrAttack" to="." method="_on_tmr_attack_timeout"]
